--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,13 @@
 {% block content %}
     <h2 class="text-center text-light">Translate text from English (EN) to Spanish (ES)</h2>
     <form action="" method="post">
+        {{ form.hidden_tag() }}
         <div class="form-group text-center form-top">
             {{ form.input_field(class_="bg-light text-secondary") }}
-            {{ form.submit(class_="btn bg-light submit") }}
+            {{ form.submit(class_="btn bg-secondary submit") }}
         </div>
     </form>
+    {{ form.csrf_token() }}
     {% if translations %}
         <table class="table table-dark table-striped table-hover">
             <tr>
